--- a/coupon.html
+++ b/coupon.html
@@ -157,7 +157,7 @@
 
         // Get coupon ID from URL
         const urlParams = new URLSearchParams(window.location.search);
-        const couponId = "COUPON001"
+        const couponId = urlParams.get('id');
         window.couponId = couponId;
 
         // Check coupon status
